# lokidata

./: .gitattributes  Readme.md  pyproject.toml  setup.cfg  setup.py
lokidata/: __init__.py  _version.py  cli.py
