[build-system]
requires = ["setuptools>=61.0", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "lokidata/_version.py"
versionfile_build = "lokidata/_version.py"
tag_prefix = "v"

[tool.isort]
known_first_party = ["lokidata"]
